# openmp

./: .gitignore  CMakeLists.txt  README.md  filter.cpp  filter.h  filters.cpp  filters.h  main.cpp  predictor.cpp  predictor.h  predictors.cpp  predictors.h  preprocessors.cpp  preprocessors.h  process.cpp  process.h
